---------------------------
YAM Open Source - ChangeLog
---------------------------

$Id$
$URL$

2011-12-23 Jens Langner <Jens.Langner@light-speed.de>

  * YAM_FI.c: changed mail search window to also show a listtree
    rather than a plain list. Also changed the search window to not
    clear its mail list on exit and to also keep the same listtree
    selection when reopening the window. This should be a bit more
    intuitive in case a user want to return to the search window
    and see the old search results.

2011-12-21 Jens Langner <Jens.Langner@light-speed.de>

  * mui/FolderRequestListtree.c: implemented that custom folder image
    object will also be created for the FolderRequestListtree.
  * mui/FolderListtree, mui/FolderRequestListtree.c: implemented
    a base class for the folder listtree and changed the old
    FolderRequestList class to a Listtree class. In addition,
    MainFolderListtree is also now derived from the new
    FolderListtree class. In the end, this change allowed to 
    use a listtree rather than a plain list for the folder
    request window. Thus, this should close #136.

2011-12-18 Jens Langner <Jens.Langner@light-speed.de>

  * YAM.c, YAM_EA.c: fixed some potentially critical DoMethod calls
    to NListtree which might have showed some problems.

2011-12-17 Jens Langner <Jens.Langner@light-speed.de>

  * mui/AddrBookListtree.c, MainFolderListtree.c: now that a new
    fixed NListtree.mcc is released the previously added workaround
    could be removed.
  * YAM.c: bumped all minimum required versions of all MCCs to what are
    the latest versions available as there are new features and fixes
    out there in these classes.
  * AVLTree.c: replace AllocVec/FreeVec calls with AllocVecPooled and
    FreeVecPooled as AllocVec/FreeVec are marked as deprecated in the
    latest OS4 SDK.
  * extrasrc: slightly revised some of our own implementation of standard
    C functions and tried to make them more compatible to version found